Change YAML dashboard

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,11 +1,12 @@
 ---
 # Yaml Dashboard for Home Assistant
-# Made by WeaselADHD 2022
-# https://weaselweb.nl/
 
 button_card_templates: !include_dir_merge_named templates/button-card/
+apexcharts_card_templates: !include templates/apexcharts-card.yaml
 
 title: Dashboard
 views:
   - !include views/summary.yaml
   - !include views/lights.yaml
+  - !include views/environment.yaml
+  - !include views/energy.yaml
