--- a/automations.yaml
+++ b/automations.yaml
@@ -40,8 +40,10 @@
     offset: 00:05:00
   condition: []
   action:
-  - service: openuv.update_uv_index_data
+  - service: homeassistant.update_entity
     data: {}
+    target:
+      entity_id: sensor.current_uv_index
   mode: single
 - id: '1612980243699'
   alias: Update OpenUV every 30 minutes during daytime
@@ -56,8 +58,10 @@
       before: sunset
       after: sunrise
   action:
-  - service: openuv.update_uv_index_data
+  - service: homeassistant.update_entity
     data: {}
+    target:
+      entity_id: sensor.current_uv_index
   mode: single
 - id: '1612980343472'
   alias: Update OpenUV protection window daily
@@ -67,8 +71,10 @@
     at: 02:12:00
   condition: []
   action:
-  - service: openuv.update_protection_data
+  - service: homeassistant.update_entity
     data: {}
+    target:
+      entity_id: binary_sensor.protection_window
   mode: single
 - id: '1623006218863'
   alias: Low battery level detection & notification for all battery sensors
@@ -239,7 +245,7 @@
     path: AngellusMortis/dynamic_doorbell.yaml
     input:
       doorbell: select.uvc_g4_doorbell_doorbell_text
-      temp_entity: sensor.br_temperature
+      temp_entity: sensor.wupws_temp
       text_template: Welcome | {ctime} | {temp}
       time_format: '%H:%M'
 - id: '1657871870764'
