--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -95,3 +95,11 @@ weather_com_allergy_forecast: https://url.com/sub/12341234123412345
 
 # fixer
 fixer_api_key: 12345AB45345
+
+# Weather Underground
+WU_id: IROSMA29
+WU_key: n4L2dJ9c
+WU_api: 905f5993253746e69f5993923766e6df
+
+# trusted proxy
+trusted_proxy: 172.30.32.7
