blueprints + small config update

--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -97,9 +97,14 @@ weather_com_allergy_forecast: https://url.com/sub/12341234123412345
 fixer_api_key: 12345AB45345
 
 # Weather Underground
-WU_id: IROSMA29
-WU_key: n4L2dJ9c
-WU_api: 905f5993253746e69f5993923766e6df
+WU_id: IWAT23
+WU_key: 45NLha
+WU_api: lekkerlangekeyhier12345
 
 # trusted proxy
-trusted_proxy: 172.30.32.7
+trusted_proxy: 172.30.33.7
+
+# qbittorrent
+qbit_url: http://192.168.1.123:456/
+qbit_user: gebruikersnaam
+qbit_pass: wachtwoord!
