--- a/automations.yaml
+++ b/automations.yaml
@@ -413,3 +413,80 @@
     target:
       entity_id: input_boolean.evening_temperature_warning_fired
   mode: single
+- id: '1669983147174'
+  alias: Smart switch study room
+  description: ''
+  use_blueprint:
+    path: vandalon/z2m EnOcean PTM 215Z (Friends of Hue) switch.yaml
+    input:
+      controller: Smart switch study room
+      button_1_pressed: []
+      button_2_pressed: []
+      button_1_and_3_pressed: []
+      button_2_and_4_pressed: []
+      button_3_pressed:
+      - service: light.turn_on
+        data:
+          transition: 1
+        target:
+          device_id: 33fe15ce0a53ea639ef8ca056bd93403
+      button_4_pressed:
+      - service: light.turn_off
+        data:
+          transition: 1
+        target:
+          device_id: 33fe15ce0a53ea639ef8ca056bd93403
+- id: '1669983996137'
+  alias: Smart switch bedroom
+  description: ''
+  use_blueprint:
+    path: vandalon/z2m EnOcean PTM 215Z (Friends of Hue) switch.yaml
+    input:
+      controller: Smart switch bedroom
+      button_3_pressed:
+      - service: light.turn_on
+        data:
+          transition: 1
+          brightness_pct: 80
+        target:
+          device_id: 17249d23849dd37faf257b3fe1d78ca2
+      button_4_pressed:
+      - service: light.turn_off
+        data:
+          transition: 1
+        target:
+          device_id: 17249d23849dd37faf257b3fe1d78ca2
+      button_3_held:
+      - service: light.turn_on
+        data:
+          transition: 1
+          brightness_pct: 20
+        target:
+          device_id: 17249d23849dd37faf257b3fe1d78ca2
+- id: '1670232852305'
+  alias: Smart switch dining room
+  description: ''
+  use_blueprint:
+    path: vandalon/z2m EnOcean PTM 215Z (Friends of Hue) switch.yaml
+    input:
+      controller: Smart switch dining room
+      button_3_pressed:
+      - service: light.turn_on
+        data:
+          transition: 1
+          brightness_pct: 80
+        target:
+          device_id: 090693b1f4c84bb93c78e4fd9f12bd1f
+      button_4_pressed:
+      - service: light.turn_off
+        data:
+          transition: 1
+        target:
+          device_id: 090693b1f4c84bb93c78e4fd9f12bd1f
+      button_3_held:
+      - service: light.turn_on
+        data:
+          transition: 1
+          brightness_pct: 20
+        target:
+          device_id: 090693b1f4c84bb93c78e4fd9f12bd1f
