--- a/blueprints/switch_manager/deconz-ikea-tradfri-shortcut-v1.yaml
+++ b/blueprints/switch_manager/deconz-ikea-tradfri-shortcut-v1.yaml
@@ -1,17 +1,13 @@
-name: Aqara Wireless Mini Switch
+name: Ikea Trådfri Shortcut
 service: deCONZ
 event_type: deconz_event
-identifier_key: device_id
+identifier_key: id
 buttons:
   - actions:
       - title: press
         conditions:
           - key: event
             value: 1002
-      - title: press 2x
-        conditions:
-          - key: event
-            value: 1004
       - title: hold
         conditions:
           - key: event
@@ -20,7 +16,3 @@ buttons:
         conditions:
           - key: event
             value: 1003
-      - title: viabrate
-        conditions:
-          - key: event
-            value: 1007
