--- a/integrations/proxmoxve.yaml
+++ b/integrations/proxmoxve.yaml
@@ -7,14 +7,16 @@ proxmoxve:
     realm: pve
     verify_ssl: false
     nodes:
-      - node: pve
-        vms:
-          - 100
-          - 301
-          - 401
-        containers:
-          - 402
-          - 500
-          - 501
-          - 502
-          - 503
+    - node:
+        -pve-01
+        -pve-02
+      vms:
+        - 100
+        - 301
+        - 401
+      containers:
+        - 402
+        - 500
+        - 501
+        - 502
+        - 503
